=== HEAD

* Support :hash_dup and Proc Model inherited instance variable types (jeremyevans)

* Handle aliased tables in the pg_row plugin (jeremyevans)

* Add input_transformer plugin, for automatically transform input to model column setters (jeremyevans)

* Add auto_validations plugin, for automatically adding not null, type, and unique validations (jeremyevans)

* Add validates_not_null to validation_helpers (jeremyevans)

* Add :setter, :adder, :remover, and :clearer association options for overriding the default modification behavior (jeremyevans)

* Add Database#register_array_type to the pg_array extension, for registering database-specific array types (jeremyevans)

* Speed up fetching model instances when using update_primary_key plugin (jeremyevans)

* In the update_primary_key plugin, if the primary key column changes, clear related associations (jeremyevans)

* Add :allow_missing_migration_files option to migrators, for not raising if migration files are missing (bporterfield) (#652)

* Fix race condition related to prepared_sql for newly prepared statements (jeremyevans) (#651)

* Support :keep_reference=>false Database option for not adding reference to Sequel::DATABASES (jeremyevans)

* Make Postgres::HStoreOp#- explicitly cast a string argument to text, to avoid PostgreSQL assuming it is an hstore (jeremyevans)

* Add validates_schema_types validation for validating column values are instances of an appropriate class (jeremyevans)

* Allow validates_type validation to accept an array of allowable classes (jeremyevans)

* Add Database#schema_type_class for getting the ruby class or classes related to the type symbol (jeremyevans)

* Add error_splitter plugin, for splitting multi-column errors into separate errors per column (jeremyevans)

* Skip validates_unique validation if underlying columns are not valid (jeremyevans)

* Allow Model#modified! to take an optional column argument and mark that column as being modified (jeremyevans)
